# opengl_simple_engine

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
figures/: cube.txt  pyramid.txt
shaders/: fragment_shader_all_blue.glsl  fragment_shader_dynamic_cube.glsl  fragment_shader_white.glsl  vertex_shader_dynamic_cube.glsl  vertex_shader_light.glsl  vertex_shader_origin_point.glsl  vertex_shader_x_moving_triangle.glsl
src/: cube.cpp  cube.hpp  fragment_shader.cpp  fragment_shader.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  utils.cpp  utils.hpp  vertex_shader.cpp  vertex_shader.hpp
